Dokončenie kontroly CSS prikladov

--- a/css/tooltip/index.html
+++ b/css/tooltip/index.html
@@ -28,10 +28,29 @@
 
 </head>
     <body>
-        <div class="text">
-            Lorem ipsum dolor sit amet, <div class="has-tooltip">consectetur<span class="tooltip">asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d</span></div> adipiscing elit. Curabitur tempor leo at urna varius, eget scelerisque
-            arcu interdum. Aliquam et accumsan diam. Mauris <div class="has-tooltip">tincidunt<span class="tooltip">asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d</span></div> faucibus fermentum. Vestibulum tempor dui quis erat
-            lobortis suscipit. Ut sit amet rutrum lacus, at <div class="has-tooltip">blandit<span class="tooltip">asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d</span></div> nulla.
+    <div class="text">
+        Lorem ipsum dolor sit amet,
+        <div class="has-tooltip">
+            consectetur
+            <span class="tooltip">
+        Tooltip: In mollis accumsan sodales.
+      </span>
         </div>
+        adipiscing elit. In
+        <div class="has-tooltip">
+            hendrerit
+            <span class="tooltip">
+        Tooltip: Maecenas lobortis quam quis euismod maximus.
+      </span>
+        </div>
+        adipiscing elit. ac ex eu aliquam. Etiam lacus orci, egestas et tempor at,
+        <div class="has-tooltip">
+            rutrum
+            <span class="tooltip">
+        Tooltip: Curabitur consequat ligula vel tortor consequat, quis mattis mi egestas.
+      </span>
+        </div>
+        adipiscing elit. vitae nulla.
+    </div>
     </body>
 </html>
