Oprava JS - hodiny + tabulka

--- a/js/analog-clock/index.html
+++ b/js/analog-clock/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JS Hodinky</title>
     <script>
 
-        function degToRad(d) {
-            return d * 0.01745;
+        function degToRad(degrees) {
+            return degrees * (Math.PI/180);
         }
 
         function drawLineMarker(ctx, uhol, markerLength) {
