--- a/js/tooltip/index.html
+++ b/js/tooltip/index.html
@@ -38,9 +38,9 @@
 </head>
     <body>
         <div class="text">
-            Lorem ipsum dolor sit amet, <div data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">consectetur</div> adipiscing elit. Curabitur tempor leo at urna varius, eget scelerisque
-            arcu interdum. Aliquam et accumsan diam. Mauris <div  data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">tincidunt</div> faucibus fermentum. Vestibulum tempor dui quis erat
-            lobortis suscipit. Ut sit amet rutrum lacus, at <div  data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">blandit</div> nulla.
+            Lorem ipsum dolor sit amet, <div data-tooltip="In mollis accumsan sodales.">consectetur</div> adipiscing elit. Curabitur tempor leo at urna varius, eget scelerisque
+            arcu interdum. Aliquam et accumsan diam. Mauris <div  data-tooltip="Maecenas lobortis quam quis euismod maximus.">tincidunt</div> faucibus fermentum. Vestibulum tempor dui quis erat
+            lobortis suscipit. Ut sit amet rutrum lacus, at <div  data-tooltip="Curabitur consequat ligula vel tortor consequat, quis mattis mi egestas.">blandit</div> nulla.
         </div>
     </body>
 </html>
