--- a/css/dropdownmenu/drop-up-menu.html
+++ b/css/dropdownmenu/drop-up-menu.html
@@ -133,8 +133,8 @@
                     <span>Zobrazenie</span>
                     <ul>
                         <li><span>Iba text</span></li>
-                        <li><span>Iba obrazky</span></li>
-                        <li><span>Text a ramce obrazkov</span></li>
+                        <li><span>Iba obrázky</span></li>
+                        <li><span>Text a ramčeky obrázkov</span></li>
                         <li><span>Korektor</span></li>
                         <li><span>Iba zmeny</span></li>
                     </ul>
@@ -147,7 +147,7 @@
             <ul>
                 <li><span>Reset</span></li>
                 <li>
-                    <span>Resetovat sluzbu</span>
+                    <span>Resetovať službu</span>
                     <ul>
                         <li><span>DB</span></li>
                         <li><span>Splitter</span></li>
@@ -161,23 +161,23 @@
                         <li>
                             <span>Chyby</span>
                             <ul>
-                                <li><span>Vsetky</span></li>
-                                <li><span>Fatal</span></li>
+                                <li><span>Všetky</span></li>
+                                <li><span>Fatálne</span></li>
                                 <li><span>Varovania</span></li>
                             </ul>
                         </li>
                         <li><span>Udalosti</span></li>
-                        <li><span>Vykonnost</span></li>
+                        <li><span>Výkonnosť</span></li>
                     </ul>
                 </li>
-                <li><span>Zaloha</span></li>
+                <li><span>Záloha</span></li>
             </ul>
         </li>
         <li>
             <span>Help</span>
             <ul>
-                <li><span>O aplikacii</span></li>
-                <li><span>Manual</span></li>
+                <li><span>O aplikácii</span></li>
+                <li><span>Manuál</span></li>
             </ul>
         </li>
     </ul>
