Position example free images

--- a/css/position/index.html
+++ b/css/position/index.html
@@ -6,10 +6,10 @@
 </head>
 	<body>
 		<div class="sun"></div>
-		<div class="bird top left"></div>
-		<div class="bird top flip right"></div>
-		<div class="bird bottom left"></div>
-		<div class="bird bottom flip right"></div>
+		<div class="bird top flip left"></div>
+		<div class="bird top right"></div>
+		<div class="bird bottom flip left"></div>
+		<div class="bird bottom right"></div>
 	</body>
 </html>
 
