--- a/js/tooltip/index.html
+++ b/js/tooltip/index.html
@@ -16,6 +16,7 @@
             border: 1px solid black;
             position: absolute;
             background-color: white;
+            z-index: 1;
             padding: 3px;
             top: 120%;
             left: 0;
