--- a/css/tooltip/index.html
+++ b/css/tooltip/index.html
@@ -16,11 +16,18 @@
             border: 1px solid black;
             position: absolute;
             background-color: white;
+            font-weight: normal;
             padding: 3px;
             top: 120%;
             left: 0;
             z-index: 1;
         }
+
+        div.has-tooltip .tooltip::before {
+            content: "Tooltip: ";
+            font-weight: bold;
+        }
+
         div.has-tooltip:hover .tooltip {
             display: block;
         }
@@ -33,21 +40,21 @@
         <div class="has-tooltip">
             consectetur
             <span class="tooltip">
-        Tooltip: In mollis accumsan sodales.
+        In mollis accumsan sodales.
       </span>
         </div>
         adipiscing elit. In
         <div class="has-tooltip">
             hendrerit
             <span class="tooltip">
-        Tooltip: Maecenas lobortis quam quis euismod maximus.
+        Maecenas lobortis quam quis euismod maximus.
       </span>
         </div>
         adipiscing elit. ac ex eu aliquam. Etiam lacus orci, egestas et tempor at,
         <div class="has-tooltip">
             rutrum
             <span class="tooltip">
-        Tooltip: Curabitur consequat ligula vel tortor consequat, quis mattis mi egestas.
+        Curabitur consequat ligula vel tortor consequat, quis mattis mi egestas.
       </span>
         </div>
         adipiscing elit. vitae nulla.
