css gallery text update

--- a/css/gallery/index.html
+++ b/css/gallery/index.html
@@ -135,13 +135,11 @@
             <h3>Faukulta riadenia a informatiky</h3>
             <p>Budova FRI zo zadnej strany.</p>
         </div>
-
-        <!--
         <div class="photo">
             <img src="images_gallery/fotka6.jpg" />
             <h3>Včela</h3>
             <p>Ďalšia fotka včely</p>
-        </div>-->
+        </div>
     </div>
 
 </body>
