--- a/css/dropdownmenu/drop-up-menu.html
+++ b/css/dropdownmenu/drop-up-menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Drop-up menu</title>
     <style>
         * {
             margin: 0;
@@ -49,7 +49,7 @@
         ul li:hover > ul ul {
             bottom: -1px;
             left: 100%;
-            margin-left: 0px;
+            margin-left: 0;
         }
 
         /*indikator*/
