--- a/css/pool/index.html
+++ b/css/pool/index.html
@@ -25,7 +25,7 @@
 
         @keyframes x-axis {
             from {
-                left: 0px;
+                left: 0;
             }
             to {
                 left: 470px; 
@@ -34,7 +34,7 @@
 
         @keyframes y-axis {
             from {
-                top: 0px;
+                top: 0;
             }
             to {
                 top: 270px;
