--- a/css/gallery/index.html
+++ b/css/gallery/index.html
@@ -109,19 +109,19 @@
         <div class="photo">
             <img src="images_gallery/fotka.jpg" />
             <h3>Včelín</h3>
-            <p>Popisok fotky na ktorej je včelín.</p>
+            <p>Popisok obrázku, na ktorej je včelín.</p>
         </div>
 
         <div class="photo">
             <img src="images_gallery/fotka2.jpg" />
             <h3>Včela</h3>
-            <p>Popisok fotky na ktorej je včela.</p>
+            <p>Popisok obrázku, na ktorej je včela.</p>
         </div>
 
         <div class="photo">
             <img src="images_gallery/fotka3.jpg" />
             <h3>Včelín</h3>
-            <p>Popisok fotky na ktorej je včelín.</p>
+            <p>Popisok obrázku, na ktorej je včelín.</p>
         </div>
 
         <div class="photo">
@@ -138,7 +138,7 @@
         <div class="photo">
             <img src="images_gallery/fotka6.jpg" />
             <h3>Včela</h3>
-            <p>Ďalšia fotka včely</p>
+            <p>Ďalší obrázok včely</p>
         </div>
     </div>
 
