--- a/css/gallery/index.html
+++ b/css/gallery/index.html
@@ -109,19 +109,19 @@
         <div class="photo">
             <img src="images_gallery/fotka.jpg" />
             <h3>Včelín</h3>
-            <p>Popisok obrázku, na ktorej je včelín.</p>
+            <p>Popisok obrázku, na ktorom je včelín.</p>
         </div>
 
         <div class="photo">
             <img src="images_gallery/fotka2.jpg" />
             <h3>Včela</h3>
-            <p>Popisok obrázku, na ktorej je včela.</p>
+            <p>Popisok obrázku, na ktorom je včela.</p>
         </div>
 
         <div class="photo">
             <img src="images_gallery/fotka3.jpg" />
             <h3>Včelín</h3>
-            <p>Popisok obrázku, na ktorej je včelín.</p>
+            <p>Popisok obrázku, na ktorom je včelín.</p>
         </div>
 
         <div class="photo">
@@ -132,7 +132,7 @@
 
         <div class="photo">
             <img src="images_gallery/fotka5.jpg" />
-            <h3>Faukulta riadenia a informatiky</h3>
+            <h3>Fakulta riadenia a informatiky</h3>
             <p>Budova FRI zo zadnej strany.</p>
         </div>
         <div class="photo">
