Animated gifs replacement

--- a/ajax/chat/index.html
+++ b/ajax/chat/index.html
@@ -88,7 +88,7 @@
             <div id="chat-bar">
                 <span id="private-area" class="hidden">
                     <button id="cancel-private">x</button>
-                    Skromná pre <span id="private"></span>
+                    Súkromná správa pre <span id="private"></span>
                 </span>
                 <input type="text" id="message">
                 <button id="send-button">Odoslať</button>
