--- a/js/analog-clock/index.html
+++ b/js/analog-clock/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Hodinky</title>
+    <title>JS Hodiny</title>
     <script>
 
         function degToRad(degrees) {
