Final text wrapping

--- a/css/position/index.html
+++ b/css/position/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Obloha</title>
-	<link rel="stylesheet" href="css/styl.css">
+	<link rel="stylesheet" href="styl.css">
 </head>
 	<body>
 		<div class="sun"></div>
